--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-    "name": "mean-girls-bot",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@slack/client": "^3.8.1",
-        "dotenv": "^4.0.0",
-        "request": "^2.80.0",
-        "slackbots": "^1.0.2"
-    }
+  "name": "mean-girls-bot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon --exec babel-node src/index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@slack/client": "^3.8.1",
+    "dotenv": "^4.0.0",
+    "request": "^2.80.0",
+    "slackbots": "^1.0.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "nodemon": "^1.11.0"
+  }
 }
